--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <title>Carta de Disculpas</title>
     <style>
         body {
-            background-color: #FFD700; /* Fondo amarillo */
-            background-image: url('https://i.imgur.com/2Hfq40S.png'); /* Imagen del sobre */
+            background-color: #ADD8E6; /* Fondo azul claro */
+            background-image: url('https://media.giphy.com/media/Z8pH6hjlA9Wm0/giphy.gif'); /* Imagen del monito bailando */
             background-repeat: no-repeat;
             background-position: center;
-            background-size: 50%; /* Tamaño de la imagen del sobre */
-            color: #FFFFFF; /* Color del texto */
+            background-size: 50%; /* Tamaño de la imagen del monito */
+            color: #800080; /* Color morado */
             font-family: Arial, sans-serif;
             padding: 20px;
         }
 
         h1 {
-            color: #FF4500; /* Color naranja */
+            color: #800080; /* Color morado */
         }
     </style>
 </head>
 <body>
     <h1>No te enojes, Fernandita</h1>
-    <p>Me gustaría disculparme por cualquier cosa que haya sucedido. Por favor, acepta estas disculpas como un gesto sincero de arrepentimiento.</p>
+    <p>te lo dije de broma jaja para que veas te hice esta pagina para que me disculpes no es la mejor pagina pero es para que no te enojes.</p>
     <p>Espero que podamos resolver cualquier malentendido y seguir adelante juntos.</p>
     <p>Con cariño,</p>
     <p>yo :p</p>
 </body>
 </html>
+
